--- a/modx.css
+++ b/modx.css
@@ -8,7 +8,7 @@
  * See http://en.boardgamearena.com/#!doc/Studio for more information.
  * -----
  */
-#mdx_board {
+#board {
   width: 522px;
   height: 522px;
   background-image: url("img/modx_board.png");
@@ -20,11 +20,11 @@
   position: relative;
 }
 
-.show_notation #board {
+.mdx_show_notation #board {
   margin-bottom: 40px;
 }
 
-.coordinate_marker {
+.mdx_coordinate_marker {
   width: auto;
   height: auto;
   position: absolute;
@@ -33,18 +33,18 @@
   font-size: 16pt;
 }
 
-.hide_notation .coordinate_marker {
+.mdx_hide_notation .mdx_coordinate_marker {
   display: none;
 }
 
-.square {
+.mdx_square {
   width: 62px;
   height: 62px;
   position: absolute;
   z-index: 0;
 }
 
-.scoretile {
+.mdx_scoretile {
   top: 0px;
   left: 0px;
   width: 62px;
@@ -54,32 +54,32 @@
   pointer-events: none;
 }
 
-.tilecolor_009bd2 {
+.mdx_tilecolor_009bd2 {
   background-color: #0077a3;
 }
 
-.tilecolor_e53f2c {
+.mdx_tilecolor_e53f2c {
   background-color: #b23223;
 }
 
-.tilecolor_050303 {
+.mdx_tilecolor_050303 {
   background-color: #414141;
 }
 
-.tilecolor_ffc750 {
+.mdx_tilecolor_ffc750 {
   background-color: #d9a03e;
 }
 
-.token {
+.mdx_token {
   width: 56px;
   height: 56px;
   position: absolute;
   z-index: 4;
   background-image: url("img/modx_tokens.png");
-  transform: scale(0.9);
+  transform: scale(0.8);
 }
 
-.tokencolor_0 {
+.mdx_tokencolor_0 {
   background-position: 0px 0px;
   animation: pulse 1s ease-in-out infinite alternate-reverse;
 }
@@ -92,7 +92,7 @@
     opacity: 1;
   }
 }
-.instant_win {
+.mdx_instant_win {
   animation: instant_win_animation 2s ease-in-out infinite;
 }
 
@@ -107,32 +107,32 @@
     transform: rotate(360deg) scale(1);
   }
 }
-.tokencolor_009bd2 {
+.mdx_tokencolor_009bd2 {
   background-position: -56px 0px;
 }
 
-.tokencolor_e53f2c {
+.mdx_tokencolor_e53f2c {
   background-position: -112px 0px;
 }
 
-.tokencolor_050303 {
+.mdx_tokencolor_050303 {
   background-position: -168px 0px;
 }
 
-.tokencolor_ffc750 {
+.mdx_tokencolor_ffc750 {
   background-position: -224px 0px;
 }
 
-.token_outline {
+.mdx_token_outline {
   background-position: -280px 0px;
   z-index: 3;
 }
 
-.hide_lastPlayed .lastPlayed {
+.mdx_hide_lastPlayed .mdx_lastPlayed {
   display: none;
 }
 
-.lastPlayed {
+.mdx_lastPlayed {
   pointer-events: none;
   width: 45px;
   height: 45px;
@@ -141,23 +141,23 @@
   background-image: url("img/modx_last_played.png");
 }
 
-.lastPlayedcolor_009bd2 {
+.mdx_lastPlayedcolor_009bd2 {
   background-position: 0px 0px;
 }
 
-.lastPlayedcolor_e53f2c {
+.mdx_lastPlayedcolor_e53f2c {
   background-position: -45px 0px;
 }
 
-.lastPlayedcolor_050303 {
+.mdx_lastPlayedcolor_050303 {
   background-position: -90px 0px;
 }
 
-.lastPlayedcolor_ffc750 {
+.mdx_lastPlayedcolor_ffc750 {
   background-position: -135px 0px;
 }
 
-.selectable.tokencolor_0 {
+.mdx_selectable.mdx_tokencolor_0 {
   animation: selectable-token-animation 1s ease-in-out infinite alternate-reverse;
   z-index: 5;
 }
@@ -170,12 +170,12 @@
     opacity: 0.8;
   }
 }
-.tokencolor_0.selectable.selected {
+.mdx_tokencolor_0.mdx_selectable.mdx_selected {
   animation: none;
   background-image: none;
 }
 
-.selected::before {
+.mdx_selected::before {
   content: "";
   background-image: url("img/modx_selected_wild.png");
   content: "";
@@ -187,7 +187,7 @@
   transform: translate(-50%, -50%);
 }
 
-.pattern {
+.mdx_pattern {
   position: absolute;
   background-image: url("img/modx_patterns.png");
   z-index: 2;
@@ -197,51 +197,51 @@
   transition: opacity 1s ease-in-out;
 }
 
-.patterncolor_009bd2 {
+.mdx_patterncolor_009bd2 {
   --y-pos: 0px;
 }
 
-.patterncolor_e53f2c {
+.mdx_patterncolor_e53f2c {
   --y-pos: -330px;
 }
 
-.patterncolor_050303 {
+.mdx_patterncolor_050303 {
   --y-pos: -660px;
 }
 
-.patterncolor_ffc750 {
+.mdx_patterncolor_ffc750 {
   --y-pos: -990px;
 }
 
-.patterntype_row, .patterntype_col {
+.mdx_patterntype_row, .mdx_patterntype_col {
   height: 330px;
   width: 74px;
 }
 
-.patterntype_row, .patterntype_ned {
+.mdx_patterntype_row, .mdx_patterntype_ned {
   transform: rotate(90deg);
 }
 
-.patterntype_pls, .patterntype_crs {
+.mdx_patterntype_pls, .mdx_patterntype_crs {
   height: 202px;
   width: 202px;
 }
 
-.patterntype_crs {
+.mdx_patterntype_crs {
   --x-pos: -74px;
 }
 
-.patterntype_pls {
+.mdx_patterntype_pls {
   --x-pos: -276px;
 }
 
-.patterntype_nwd, .patterntype_ned {
+.mdx_patterntype_nwd, .mdx_patterntype_ned {
   --x-pos: -478px;
   height: 330px;
   width: 330px;
 }
 
-.flash {
+.mdx_flash {
   animation: flash 2s ease-in-out;
 }
 
@@ -264,16 +264,16 @@
     opacity: 0.5;
   }
 }
-.fade-out {
+.mdx_fade-out {
   animation: fadeOut 2s forwards;
 }
 
-.possibleMove {
+.mdx_possibleMove {
   background-color: rgb(255, 255, 255);
   cursor: pointer;
 }
 
-.square.possibleMove::before {
+.mdx_square.mdx_possibleMove::before {
   content: "";
   position: absolute;
   top: 0;
@@ -287,47 +287,47 @@
   z-index: 10; /* Ensure it's on top */
 }
 
-.square.possibleMove:hover::before {
+.mdx_square.mdx_possibleMove:hover::before {
   opacity: 1; /* Show on hover */
 }
 
-.playertokens {
+.mdx_playertokens {
   display: flex;
   justify-content: flex-start; /* or other values like center, space-around, etc. */
   align-items: center; /* Aligns items vertically */
   margin-right: 20px;
 }
 
-.displayToken {
+.mdx_displayToken {
   position: relative;
   scale: 0.8;
 }
 
-.counter {
+.mdx_counter {
   font-size: 24pt;
 }
 
-.player_board {
+.mdx_player_board {
   display: flex;
   justify-content: flex-start; /* or other values like center, space-around, etc. */
   align-items: center; /* Aligns items vertically */
 }
 
-.team {
+.mdx_team {
   width: 30px;
   height: 50px;
   background-image: url("img/modx_team_icons.png");
 }
 
-.team_0 {
+.mdx_team_0 {
   display: none;
 }
 
-.team_1 {
+.mdx_team_1 {
   background-position: 0px 0px;
 }
 
-.team_2 {
+.mdx_team_2 {
   background-position: 30px 0px;
 }
 
